--- a/TranslationReg/Views/LanguagePairs/List.cshtml
+++ b/TranslationReg/Views/LanguagePairs/List.cshtml
@@ -40,7 +40,7 @@
                 <a data-ajax-update="#languagePair@(item.Id)" data-href="/LanguagePairs/Edit/@item.Id" class="btn btn-primary ajaxToggleBtn">
                     Редактировать
                 </a>
-                <a data-ajax="true" href="/LanguagePairs/Delete/@item.Id" class="btn btn-danger deleteBtn" data-dialog-title="Удаление записи">Удалить</a>
+                <a href="/LanguagePairs/Delete/@item.Id" class="btn btn-danger deleteBtn" data-dialog-title="Удаление языковой пары">Удалить</a>
             </div>
         </div>
         <div id="languagePair@(item.Id)" class="dynamicBlock dynamicItem"></div>
