--- a/TranslationReg/Views/DocStages/Delete.cshtml
+++ b/TranslationReg/Views/DocStages/Delete.cshtml
@@ -17,7 +17,7 @@
             @Html.AntiForgeryToken()
     
             <div class="form-actions no-color">
-                <input type="submit" value="Удалить" class="btn btn-default" />
+                <input type="submit" value="Удалить" class="btn btn-danger" />
             </div>
         }
     </div>
