--- a/TranslationReg/Views/Languages/Delete.cshtml
+++ b/TranslationReg/Views/Languages/Delete.cshtml
@@ -4,22 +4,11 @@
     
     <div>
         <dl class="dl-horizontal">
-            <dt>
-                @Html.Label("Язык")
-            </dt>
+            <dt>@Html.Label("Язык")</dt>
+            <dd>@Html.DisplayFor(model => model.Name)</dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.Name)
-            </dd>
-
-            <dt>
-                @Html.Label("Сокращение")
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.ShortName)
-            </dd>
-
+            <dt>@Html.Label("Сокращение")</dt>
+            <dd>@Html.DisplayFor(model => model.ShortName)</dd>
         </dl>
         
         @using (Html.BeginForm())
