--- a/TranslationReg/Views/Projects/Documents.cshtml
+++ b/TranslationReg/Views/Projects/Documents.cshtml
@@ -34,7 +34,7 @@
                             <a href="#" class="btn disabled-btn" disabled="disabled">Скачать готовый</a>
                         }
                         <a class="btn btn-primary" href="/Documents/Edit/@doc.Id">Редактировать</a>
-                        <a class="btn btn-danger deleteBtn" href="/Documents/Delete/@doc.Id" data-dialog-title="Удаление записи">Удалить</a>
+                        <a class="btn btn-danger deleteBtn" href="/Documents/Delete/@doc.Id" data-dialog-title="Удаление документа и работ">Удалить</a>
                     </div>
                 </div>
             </div>
