--- a/TranslationReg/Views/User_Stage/Delete.cshtml
+++ b/TranslationReg/Views/User_Stage/Delete.cshtml
@@ -2,7 +2,6 @@
 
 <div>
     <dl class="dl-horizontal">
-
         <dt>@Html.LabelFor(model => model.User.Name, "Исполнитель")</dt>
         <dd>@Html.DisplayFor(model => model.User.Name)</dd>
 
@@ -19,6 +18,6 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        <input type="submit" value="Удалить" class="btn btn-default" />
+        <input type="submit" value="Удалить" class="btn btn-danger" />
 }
 </div>
