--- a/TranslationReg/Views/User_Stage/Item.cshtml
+++ b/TranslationReg/Views/User_Stage/Item.cshtml
@@ -39,7 +39,7 @@
                     @Html.ActionLink("Скачать", "Download", "User_Stage", new { @filepath = Model.DocFile.Path }, htmlAttributes: new { @class = "btn btn-primary" })
                     <a class="btn btn-info finaliseBtn" href="/User_Stage/Finalise/@Model.Id">Финализировать</a>
                 }
-                <a class="btn btn-danger deleteBtn" href="/User_Stage/Delete/@Model.Id" data-dialog-title="Удаление записи">Удалить</a>
+                <a class="btn btn-danger deleteBtn" href="/User_Stage/Delete/@Model.Id" data-dialog-title="Удаление работы">Удалить</a>
             </div>
         </div>
     </div>
