all download btns have same style, but style should be fixed later! disabled btn text color changed to improve visibility

--- a/TranslationReg/Style/style.css
+++ b/TranslationReg/Style/style.css
@@ -283,7 +283,7 @@ footer {
 .disabled-btn {
   background: lightgrey;
   border-color: grey;
-  color: white;
+  color: black;
 }
 .filters {
   list-style: none;
