--- a/TranslationReg/Style/style.less
+++ b/TranslationReg/Style/style.less
@@ -387,7 +387,7 @@ footer {
 .disabled-btn {
     background: lightgrey;
     border-color: grey;
-    color: white;
+    color: black;
 }
 
 .filters {
