--- a/TranslationReg/Views/Documents/Details.cshtml
+++ b/TranslationReg/Views/Documents/Details.cshtml
@@ -2,29 +2,16 @@
 <div>
     <h2>@Model.Name</h2>
     <dl class="dl-horizontal">
-        <dt>
-            Создатель
-        </dt>
-        <dd>
-            @Html.Label(Model.Owner.Name)
-        </dd>
+        <dt>Создатель</dt>
+        <dd>@Html.Label(Model.Owner.Name)</dd>
 
-        <dt>
-            Скачать оргигинал
-        </dt>
-        <dd>
-            <a href="@Url.Action("Download", "Documents", new { @filepath = Model.OriginalFile.Path })" class="glyphicon glyphicon-download"></a>
-        </dd>
+        <dt>Скачать оргигинал</dt>
+        <dd><a href="@Url.Action("Download", "Documents", new { @filepath = Model.OriginalFile.Path })" class="download-Btn"></a></dd>
 
         @if (Model.FinalFile != null && !String.IsNullOrWhiteSpace(Model.FinalFile.Path))
         {
-            <dt>
-                Скачать перевод
-            </dt>
-            <dd>
-                <a href="@Url.Action("Download", "Documents", new { @filepath = Model.FinalFile.Path })" class="glyphicon glyphicon-download"></a>
-
-            </dd>
+            <dt>Скачать перевод</dt>
+            <dd><a href="@Url.Action("Download", "Documents", new { @filepath = Model.FinalFile.Path })" class="download-Btn"></a></dd>
         }
     </dl>
 </div>
