Tiles and cards design templates. avatar bugfix

--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -31,6 +31,8 @@
                     <li>@Html.ActionLink("Типы работ", "Index", "WorkTypes")</li>
                     <li>@Html.ActionLink("Языки", "Index", "Languages")</li>
                     <li>@Html.ActionLink("О программе", "About", "Home")</li>
+                    <li>@Html.ActionLink("Картонки", "GetCard", "Projects")</li>
+                    <li>@Html.ActionLink("Языки", "Tiles", "Languages")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
