Edit language cards

--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                     <li>@Html.ActionLink("Языки", "Index", "Languages")</li>
                     <li>@Html.ActionLink("О программе", "About", "Home")</li>
                     <li>@Html.ActionLink("Картонки", "GetCard", "Projects")</li>
-                    <li>@Html.ActionLink("Языки", "Tiles", "Languages")</li>
+                    <li>@Html.ActionLink("Языки", "Cards", "Languages")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
