--- a/TranslationReg/Views/Languages/Cards.cshtml
+++ b/TranslationReg/Views/Languages/Cards.cshtml
@@ -3,6 +3,7 @@
 <div>
     <div class="col-md-6 container-block languagesContainer">
 
+        <!-- карточка добавления -->
         <div class="card card-container card-language">
             <div class="card-header lang-header">
                 <p>Add language</p>
@@ -14,37 +15,18 @@
                 </p>
             </div>
         </div>
-
+        <!-- языки -->
         @foreach (var language in Model.languages)
         {
-            <div class="card card-language card-container">
-                <div class="card-header lang-header">
-                    <p>Language</p>
-                    <div>
-                        <span class="fa fa-edit card-btn" style="font-size:36px"></span>
-                        <span class="fa fa-times card-btn" style="font-size:36px"></span>
-                    </div>
-                </div>
-                <div class="card-content">
-                    <div class="card-row">
-                        <div class="card-property col-md-4"><p>Name:</p></div>
-                        <div class="card-value col-md-8">
-                            <p>@language.Name</p>
-                        </div>
-                    </div>
-
-                    <div class="card-row">
-                        <div class="card-property col-md-4"><p>Abbr.:</p></div>
-                        <div class="card-value col-md-8">
-                            <p>@language.ShortName<p>
-                        </div>
-                    </div>
-                </div>
+            <div id="language@(language.Id)">
+                @Html.Partial("../Languages/Card", language)
             </div>
         }
     </div>
 
+
     <div class="col-md-6 container-block languagePairsContainer">
+        <!-- карточка добавления -->
         <div class="card card-langPair card-container">
             <div class="card-header pair-header">
                 <p>Add language pair</p>
@@ -56,40 +38,13 @@
                 </p>
             </div>
         </div>
-
+        <!-- языковые пары -->
         @foreach (var languagePair in Model.languagePairs)
         {
-            <div class="card card-langPair card-container">
-                <div class="card-header pair-header">
-                    <p>Language Pair</p>
-                    <div>
-                        <span class="fa fa-edit card-btn" style="font-size:36px"></span>
-                        <span class="fa fa-times card-btn" style="font-size:36px"></span>
-                    </div>
-                </div>
-                <div class="card-content">
-                    <div class="card-row">
-                        <div class="card-property col-md-5"><p>Name:</p></div>
-                        <div class="card-value col-md-7">
-                            <p>@languagePair.Name</p>
-                        </div>
-                    </div>
-                    <div class="card-row">
-                        <div class="card-property col-md-5"><p>Original:</p></div>
-                        <div class="card-value col-md-7">
-                            <p>@languagePair.OriginalLanguage.Name<p>
-                        </div>
-                    </div>
-                    <div class="card-row">
-                        <div class="card-property col-md-5"><p>Translation:</p></div>
-                        <div class="card-value col-md-7">
-                            <p>@languagePair.TranslationLanguage.Name<p>
-                        </div>
-                    </div>
-                </div>
+            <div id="languagePair@(languagePair.Id)">
+                @Html.Partial("../LanguagePairs/Card", languagePair)
             </div>
         }
-
     </div>
 </div>
 
@@ -100,7 +55,7 @@
         justify-content: space-around;
         flex-direction: row;
         flex-wrap: wrap;
-        margin-top: 70px;
+        margin-top: 40px;
     }
 
     .languagesContainer {
@@ -117,18 +72,20 @@
         box-shadow: -6px 5px 12px 1px rgba(0, 0, 0, 0.25);
         border-radius: 10px;
         border: 1px solid lightgray;
+        overflow:hidden;
     }
 
     .card-language {
         width: 300px;
         height: 180px;
-        background-color: #fffefc
+        background-color: #fffefc;
     }
 
     .card-langPair {
         width: 370px;
         height: 240px;
-        background-color: #fcfcff
+        background-color: #fcfcff;
+        border-radius: 10px;
     }
 
     .card-row {
@@ -172,8 +129,8 @@
         align-self: center;
     }
 
-    .myicon{
-        color:lightgray;
+    .myicon {
+        color: lightgray;
     }
     /*----------------------------------- ХОВЕР НА КАРТУ -----------------------------------*/
     .card:hover {
@@ -184,6 +141,7 @@
         .card:hover .lang-header {
             transition: 0.3s;
             background-color: #fbab72;
+            border-bottom: solid 2px #b12323;
         }
 
         .card:hover .pair-header {
@@ -217,7 +175,7 @@
     .add-card-content {
         padding: 0 10px;
         overflow: hidden;
-        display:flex;
+        display: flex;
     }
 
     /*----------------------------------- ХЕДЕРЫ КАРТОЧЕК -----------------------------------*/
@@ -251,56 +209,27 @@
             display: flex;
         }
 
-            .card-header > div span {
+            .card-header > div a {
+                padding: 0;
+                color: #333333;
+                margin-right: 10px;
                 align-self: center;
             }
 
     /*------------------------------------------------------------------------------------------*/
-
-
-    /*----------------------------------- ФЛИПЕР и его ховер -----------------------------------*/
-    .flipper:hover {
-        transform: rotateY(180deg);
-    }
-
-    /* flip speed goes here */
-    .flipper {
-        transition: 0.6s;
-        transform-style: preserve-3d;
-        position: relative;
-    }
-
-    /* hide back of pane during swap */
-    .front, .back {
-        backface-visibility: hidden;
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-    }
-
-    /* front pane, placed above back */
-    .front {
-        z-index: 2;
-        /* for firefox 31 */
-        transform: rotateY(0deg);
-    }
-    /* back, initially hidden pane */
-    .back {
-        transform: rotateY(180deg);
-    }
-    /*---------------------------------------------------------------------------------*/
-
 
     .card-btn {
         float: right;
         margin-right: 10px;
         text-shadow: none;
         transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+        color: #333333;
+        vertical-align: middle;
+        align-self: center;
     }
 
         .card-btn:hover {
+            transform: scale(1.1);
             text-shadow: 1px 1px 2px #427388;
         }
 </style>
