--- a/TranslationReg/Views/LanguagePairs/Card.cshtml
+++ b/TranslationReg/Views/LanguagePairs/Card.cshtml
@@ -1,27 +1,27 @@
 ﻿@model TranslationRegistryModel.LanguagePair
-<div class="card card-langPair card-container">
+<div class="card card-langPair">
     <div class="card-header pair-header">
-        <p>Language Pair</p>
+        <p>Языковая пара</p>
         <div>
-            <a class="fa fa-edit card-btn ajaxToggleBtn" data-href="/LanguagePairs/Edit/@Model.Id" style="font-size:36px" data-ajax-update="#languagePair@(Model.Id)"></a>
+            <a class="fa fa-edit card-btn ajaxToggleBtn" data-href="/LanguagePairs/EditCard/@Model.Id" style="font-size:36px" data-ajax-update="#languagePair@(Model.Id)"></a>
             <a class="fa fa-times card-btn deleteBtn" href="/LanguagePairs/Delete/@Model.Id" data-dialog-title="Удаление языковой пары"  style="font-size:36px"></a>
         </div>
     </div>
     <div class="card-content">
         <div class="card-row">
-            <div class="card-property col-md-5"><p>Name:</p></div>
+            <div class="card-property col-md-5"><p>Название:</p></div>
             <div class="card-value col-md-7">
                 <p>@Model.Name</p>
             </div>
         </div>
         <div class="card-row">
-            <div class="card-property col-md-5"><p>Original:</p></div>
+            <div class="card-property col-md-5"><p>Оригинал:</p></div>
             <div class="card-value col-md-7">
                 <p>@Model.OriginalLanguage.Name<p>
             </div>
         </div>
         <div class="card-row">
-            <div class="card-property col-md-5"><p>Translation:</p></div>
+            <div class="card-property col-md-5"><p>Перевод:</p></div>
             <div class="card-value col-md-7">
                 <p>@Model.TranslationLanguage.Name<p>
             </div>
