--- a/TranslationReg/Views/Languages/Cards.cshtml
+++ b/TranslationReg/Views/Languages/Cards.cshtml
@@ -1,18 +1,21 @@
 ﻿@model TranslationReg.Models.LanguagesModel
 
 <div>
-    <div class="col-md-6 container-block languagesContainer">
+    <!-- карточки языков -->
+    <div class="col-md-6 cardset-container languages-cardset">
 
         <!-- карточка добавления -->
-        <div class="card card-container card-language">
-            <div class="card-header lang-header">
-                <p>Add language</p>
-            </div>
-            <div class="add-card-content">
-                <i class="fa fa-plus-circle myicon" style="font-size:100px; float:left; padding:10px;"></i>
-                <p style="float:right; margin: 0;padding: 10px;color: #3e5983;font-weight: bold;text-align: center;font-size: 24px; align-self: center;">
-                    Click to add Language
-                </p>
+        <div id="addLanguage">
+            <div class="card card-language">
+                <div class="card-header lang-header">
+                    <p>Добавить язык</p>
+                </div>
+                <div class="add-card-content ajaxToggleBtn" data-href="/Languages/AddCard" data-ajax-update="#addLanguage" >
+                    <i class="fa fa-plus-circle addCardIcon" style="font-size:100px; float:left; padding:10px;" ></i>
+                    <p style="float:right; margin: 0;padding: 10px;color: #3e5983;font-weight: bold;text-align: center;font-size: 24px; align-self: center;" >
+                        Click to add Language
+                    </p>
+                </div>
             </div>
         </div>
         <!-- языки -->
@@ -24,18 +27,21 @@
         }
     </div>
 
+    <!-- карточки языковых пар -->
+    <div class="col-md-6 cardset-container languagePairs-cardset">
 
-    <div class="col-md-6 container-block languagePairsContainer">
         <!-- карточка добавления -->
-        <div class="card card-langPair card-container">
-            <div class="card-header pair-header">
-                <p>Add language pair</p>
-            </div>
-            <div class="add-card-content">
-                <i class="fa fa-plus-circle myicon" style="font-size:150px; float:left; padding:10px;"></i>
-                <p style="float:right; margin: 0;padding: 20px 20px;color: #3e5983; font-weight: bold;text-align: center;font-size: 24px; align-self: center;">
-                    Click to add Language pair
-                </p>
+        <div id="addLanguagePair">
+            <div class="card card-langPair">
+                <div class="card-header pair-header">
+                    <p>Добавить языковую пару</p>
+                </div>
+                <div class="add-card-content ajaxToggleBtn" data-href="/LanguagePairs/AddCard" data-ajax-update="#addLanguagePair">
+                    <i class="fa fa-plus-circle addCardIcon" style="font-size:150px; float:left; padding:10px;"></i>
+                    <p style="float:right; margin: 0;padding: 20px 20px;color: #3e5983; font-weight: bold;text-align: center;font-size: 24px; align-self: center;">
+                        Click to add Language pair
+                    </p>
+                </div>
             </div>
         </div>
         <!-- языковые пары -->
@@ -49,7 +55,10 @@
 </div>
 
 <style>
-    .container-block {
+    /*-------------------------- контейнеры карт --------------------------*/
+
+    /* контейнер списка карт */
+    .cardset-container {
         height: 100%;
         display: flex;
         justify-content: space-around;
@@ -58,21 +67,23 @@
         margin-top: 40px;
     }
 
-    .languagesContainer {
+    /* конкретные контейнеры списков карт */
+    .languages-cardset {
     }
 
-    .languagePairsContainer {
+    .languagePairs-cardset {
         border-left: 2px solid #e4e4e4;
     }
+    /*--------------------------------------------------------------------------------*/
 
-    .card-container {
+    .card {
         padding: 0px;
-        margin: 0 10px 30px 10px;
+        margin: 0 5px 30px 5px;
         font-family: "Open Sans", Helvetica, Arial, sans-serif;
         box-shadow: -6px 5px 12px 1px rgba(0, 0, 0, 0.25);
         border-radius: 10px;
         border: 1px solid lightgray;
-        overflow:hidden;
+        overflow: hidden;
     }
 
     .card-language {
@@ -82,10 +93,15 @@
     }
 
     .card-langPair {
-        width: 370px;
+        width: 360px;
         height: 240px;
         background-color: #fcfcff;
         border-radius: 10px;
+    }
+
+    .card-content {
+        padding: 0 5px;
+        overflow: hidden;
     }
 
     .card-row {
@@ -103,6 +119,7 @@
         color: #626262;
         text-align: left;
         display: flex;
+        padding: 10px;
     }
 
     .card-value {
@@ -111,6 +128,7 @@
         color: #333333;
         text-align: left;
         display: flex;
+        padding: 10px;
     }
 
         .card-value > p, .card-property > p {
@@ -129,7 +147,13 @@
         align-self: center;
     }
 
-    .myicon {
+    .add-card-content {
+        padding: 0 10px;
+        overflow: hidden;
+        display: flex;
+    }
+
+    .addCardIcon {
         color: lightgray;
     }
     /*----------------------------------- ХОВЕР НА КАРТУ -----------------------------------*/
@@ -167,27 +191,8 @@
     /*------------------------------------------------------------------------------------*/
 
 
-    .card-content {
-        padding: 0 5px;
-        overflow: hidden;
-    }
-
-    .add-card-content {
-        padding: 0 10px;
-        overflow: hidden;
-        display: flex;
-    }
 
     /*----------------------------------- ХЕДЕРЫ КАРТОЧЕК -----------------------------------*/
-    .pair-header {
-        background-color: #bccee5;
-        border-bottom: solid 2px #4f7a9a;
-    }
-
-    .lang-header {
-        background-color: #e5cdbc;
-        border-bottom: solid 2px #b12323;
-    }
 
     .card-header {
         display: flex;
@@ -205,16 +210,27 @@
             vertical-align: middle;
         }
 
-        .card-header > div {
-            display: flex;
-        }
+    .pair-header {
+        background-color: #bccee5;
+        border-bottom: solid 2px #4f7a9a;
+    }
 
-            .card-header > div a {
-                padding: 0;
-                color: #333333;
-                margin-right: 10px;
-                align-self: center;
-            }
+    .lang-header {
+        background-color: #e5cdbc;
+        border-bottom: solid 2px #b12323;
+    }
+
+    .card-header > div {
+        display: flex;
+    }
+
+        .card-header > div a {
+            padding: 0;
+            color: #333333;
+            margin-right: 10px;
+            align-self: center;
+            text-decoration: none;
+        }
 
     /*------------------------------------------------------------------------------------------*/
 
@@ -229,7 +245,45 @@
     }
 
         .card-btn:hover {
-            transform: scale(1.1);
-            text-shadow: 1px 1px 2px #427388;
+            color: #000000;
+            text-shadow: 2px 2px 4px #427388;
         }
+
+
+    .card-property-edit {
+        font-size: 20px;
+        color: #626262;
+        text-align: left;
+        display: flex;
+    }
+
+    .card-value-edit {
+        font-weight: bold;
+        font-size: 20px;
+        color: black;
+        text-align: left;
+        display: flex;
+        padding: 0px;
+    }
+
+    .card-row-edit {
+        display: flex;
+        height: 40px;
+    }
+
+    .card-property-edit > p {
+        margin: 0;
+        overflow: hidden;
+        white-space: nowrap;
+        align-self: center;
+        padding: 5px;
+    }
+
+    .card-value-edit > input, select {
+        margin: 5px !important;
+        overflow: hidden;
+        white-space: nowrap;
+        align-self: center;
+        padding: 5px;
+    }
 </style>
