--- a/TranslationReg/Views/Languages/Card.cshtml
+++ b/TranslationReg/Views/Languages/Card.cshtml
@@ -4,7 +4,7 @@
     <div class="card-header lang-header">
         <p>Язык</p>
         <div>
-            <a class="fa fa-edit card-btn ajaxToggleBtn" data-ajax-update="#language@(Model.Id)" data-href="/Languages/EditCard/@Model.Id" style="font-size:36px"></a>
+            <a class="fa fa-edit card-btn ajaxToggleCard" data-ajax-update="#language@(Model.Id)" data-href="/Languages/EditCard/@Model.Id" style="font-size:36px"></a>
             <a class="fa fa-times card-btn deleteBtn" href="/Languages/Delete/@Model.Id" data-dialog-title="Удаление языка" style="font-size:36px"></a>
         </div>
     </div>
