--- a/TranslationReg/Views/Languages/Cards.cshtml
+++ b/TranslationReg/Views/Languages/Cards.cshtml
@@ -10,7 +10,7 @@
                 <div class="card-header lang-header">
                     <p>Добавить язык</p>
                 </div>
-                <div class="add-card-content ajaxToggleBtn" data-href="/Languages/AddCard" data-ajax-update="#addLanguage" >
+                <div class="add-card-content ajaxToggleCard" data-href="/Languages/AddCard" data-ajax-update="#addLanguage" >
                     <i class="fa fa-plus-circle addCardIcon" style="font-size:100px; float:left; padding:10px;" ></i>
                     <p style="float:right; margin: 0;padding: 10px;color: #3e5983;font-weight: bold;text-align: center;font-size: 24px; align-self: center;" >
                         Click to add Language
@@ -36,7 +36,7 @@
                 <div class="card-header pair-header">
                     <p>Добавить языковую пару</p>
                 </div>
-                <div class="add-card-content ajaxToggleBtn" data-href="/LanguagePairs/AddCard" data-ajax-update="#addLanguagePair">
+                <div class="add-card-content ajaxToggleCard" data-href="/LanguagePairs/AddCard" data-ajax-update="#addLanguagePair">
                     <i class="fa fa-plus-circle addCardIcon" style="font-size:150px; float:left; padding:10px;"></i>
                     <p style="float:right; margin: 0;padding: 20px 20px;color: #3e5983; font-weight: bold;text-align: center;font-size: 24px; align-self: center;">
                         Click to add Language pair
