--- a/TranslationReg/Views/LanguagePairs/Card.cshtml
+++ b/TranslationReg/Views/LanguagePairs/Card.cshtml
@@ -3,7 +3,7 @@
     <div class="card-header pair-header">
         <p>Языковая пара</p>
         <div>
-            <a class="fa fa-edit card-btn ajaxToggleBtn" data-href="/LanguagePairs/EditCard/@Model.Id" style="font-size:36px" data-ajax-update="#languagePair@(Model.Id)"></a>
+            <a class="fa fa-edit card-btn ajaxToggleCard" data-href="/LanguagePairs/EditCard/@Model.Id" style="font-size:36px" data-ajax-update="#languagePair@(Model.Id)"></a>
             <a class="fa fa-times card-btn deleteBtn" href="/LanguagePairs/Delete/@Model.Id" data-dialog-title="Удаление языковой пары"  style="font-size:36px"></a>
         </div>
     </div>
