--- a/TranslationReg/Views/LanguagePairs/EditCard.cshtml
+++ b/TranslationReg/Views/LanguagePairs/EditCard.cshtml
@@ -9,7 +9,7 @@
     <div class="card card-langPair">
 
         <div class="card-header pair-header">
-            <p>Редактировать языковую пару</p>
+            <p>Ред. языковую пару</p>
             <div>
                 <a class="fa fa-arrow-circle-left card-btn" style="font-size:36px" href="/Languages/Cards"></a>
             </div>
