add card icon hover fix

--- a/TranslationReg/Views/Languages/Cards.cshtml
+++ b/TranslationReg/Views/Languages/Cards.cshtml
@@ -178,12 +178,12 @@
             background-color: #ffffff;
         }
 
-    .card-language:hover .myicon {
+    .card-language:hover .addCardIcon {
         transition: 0.3s;
         color: #ff6a00;
     }
 
-    .card-langPair:hover .myicon {
+    .card-langPair:hover .addCardIcon {
         transition: 0.3s;
         color: #1265f8;
     }
