Reworked cards and need some test with another datas

--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        
+
     </div>
     <footer>
         <p>&copy; @DateTime.Now.Year – НИИ ТПУ</p>
@@ -51,5 +51,6 @@
     @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/scripts")
     @RenderSection("scripts", required: false)
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </body>
 </html>
