--- a/TranslationReg/Style/style.css
+++ b/TranslationReg/Style/style.css
@@ -340,14 +340,27 @@ footer {
   transition: all 0.2s linear 0s;
   text-align: center;
 }
-.download-Btn:hover {
-  text-indent: -30px;
+.costum-btn {
+  text-align: center;
+  display: inline-block;
+  position: relative;
   text-decoration: none;
   color: white;
+  text-transform: capitalize;
+  padding: 5px 0px;
+  width: 110px;
+  border-radius: 4px;
+  background: #F28123;
+  font-size: 16px;
 }
-.download-Btn:hover:before {
-  right: 0;
-  text-indent: 0px;
+.costum-btn_edit::before {
+  content: "\f040";
+  font-family: FontAwesome;
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
 }
 .float-label {
   display: flex;
