--- a/TranslationReg/Views/Projects/Card.cshtml
+++ b/TranslationReg/Views/Projects/Card.cshtml
@@ -25,13 +25,35 @@
                             New York, the largest city in the U.S.
                         </p>
                         <div class="card-users">
-                            <div class="category"><a href="/Projects/TabPages/@(project.Id)">Открыть</a></div>
-                            <ul>
-                                @foreach (var user_icon in project.Workers)
+                            <a class="category" href="/Projects/TabPages/@(project.Id)">Открыть</a>
+                            @{
+                                var usersData = project.Documents.SelectMany
+                                    (x => x.Stages.SelectMany
+                                    (y => y.User_Stage.Select
+                                    (z => new { z.User.AvatarPath, z.User.Name }))).Distinct();
+                                if (usersData.Count() > 4)
                                 {
-                                <li>@user_icon.AvatarPath</li>
+
+                                    <div class="avatar-list-block">
+                                        <i class="fas fa-ellipsis-h fa-lg"></i>
+                                        <ul class="avatar-list">
+                                            @foreach (var data in usersData)
+                                            {
+                                                <li><img src="@Url.Content("~/"+data.AvatarPath)" title="@data.Name" /></li>
+                                            }
+                                        </ul>
+                                    </div>
                                 }
-                            </ul>
+                                else
+                                {
+                                    <ul class="avatar-list">
+                                        @foreach (var data in usersData)
+                                        {
+                                            <li><img src="@Url.Content("~/"+data.AvatarPath)" title="@data.Name" /></li>
+                                        }
+                                    </ul>
+                                }
+                            }
                         </div>
                         <div class="card-meta">
                             <div class="documents">
@@ -42,10 +64,6 @@
                                 else
                                 {
                                     <span><i class="fa fa-list"></i> @project.Documents.Count documents</span>
-                                }
-
-                                @if (@project.Documents.Count != 0)
-                                {
                                     <div class="documents-list">
                                         <ul>
                                             @foreach (var document in project.Documents)
@@ -55,6 +73,7 @@
                                         </ul>
                                     </div>
                                 }
+
                             </div>
                         </div>
                     </div>
@@ -95,17 +114,40 @@
         justify-content: space-between;
     }
 
-        .card-users ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
+    .avatar-list-block {
+        position: relative;
+        font-size: 2em;
+    }
+
+    .avatar-list {
+        display: none;
+        list-style: none;
+        margin: 0;
+        padding: 10px;
+        position: absolute;
+        width: 178px;
+        left: -135px;
+        top: 25px;
+        font-size: 18px;
+        background-color: white;
+        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    }
+
+        .avatar-list li {
+            display: inline-block;
+            font-size: 25px;
         }
 
-            .card-users ul li {
-                display: inline-block;
-                font-size: 25px;
-                margin-right: 5px;
+            .avatar-list li img {
+                width: 35px;
+                height: 35px;
+                border-radius: 50%;
+                border: 1px solid lightgray;
             }
+
+    .avatar-list-block:hover .avatar-list {
+        display: inline-block;
+    }
 
     .project-card {
         position: relative;
@@ -155,14 +197,14 @@
             box-sizing: border-box;
         }
 
-            .project-card .date .day {
-                font-size: 16px;
-            }
+        .project-card .date .day {
+            font-size: 16px;
+        }
 
-            .project-card .date .month {
-                font-size: 14px;
-                text-transform: uppercase;
-            }
+        .project-card .date .month {
+            font-size: 14px;
+            text-transform: uppercase;
+        }
 
         .project-card .card-content {
             position: relative;
@@ -175,17 +217,15 @@
         }
 
             .project-card .card-content .category {
-                display: flex;
+                display: inline-block;
                 width: 100px;
+                height: 40px;
                 background: #e74c3c;
                 padding: 10px 15px;
                 color: #FFFFFF;
                 font-size: 14px;
                 font-weight: 600;
                 text-transform: uppercase;
-            }
-
-            .project-card .card-content .category a {
                 color: white;
                 text-decoration: none;
             }
@@ -288,5 +328,10 @@
         -moz-box-sizing: border-box;
         box-sizing: border-box;
         float: left;
+    }
+
+    .documents-list ul li {
+        text-decoration: underline;
+        color: black;
     }
 </style>
