--- a/TranslationReg/Views/LanguagePairs/EditCard.cshtml
+++ b/TranslationReg/Views/LanguagePairs/EditCard.cshtml
@@ -19,19 +19,19 @@
             <div class="card-row-edit">
                 <div class="card-property-edit col-md-5"><p>Название:</p></div>
                 <div class="card-value-edit col-md-7">
-                    @Html.EditorFor(model => model.languagePair.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
+                    @Html.EditorFor(model => model.languagePair.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
                 </div>
             </div>
             <div class="card-row-edit">
                 <div class="card-property-edit col-md-5"><p>Оригинал:</p></div>
                 <div class="card-value-edit col-md-7">
-                    @Html.DropDownListFor(model => model.languagePair.OriginalLanguageId, Model.originalLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", requred = "required" })
+                    @Html.DropDownListFor(model => model.languagePair.OriginalLanguageId, Model.originalLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", required = "required" })
                 </div>
             </div>
             <div class="card-row-edit">
                 <div class="card-property-edit col-md-5"><p>Перевод:</p></div>
                 <div class="card-value-edit col-md-7">
-                    @Html.DropDownListFor(model => model.languagePair.TranslationLanguageId, Model.translationLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", requred = "required" })
+                    @Html.DropDownListFor(model => model.languagePair.TranslationLanguageId, Model.translationLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", required = "required" })
                 </div>
             </div>
             <div class="card-row-edit">
