--- a/TranslationReg/Views/Languages/AddCard.cshtml
+++ b/TranslationReg/Views/Languages/AddCard.cshtml
@@ -17,14 +17,14 @@
             <div class="card-row-edit">
                 <div class="card-property-edit col-md-4"><p>Назв.:</p></div>
                 <div class="card-value-edit col-md-8">
-                    @Html.EditorFor(model => model.ShortName, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
+                    @Html.EditorFor(model => model.ShortName, new { htmlAttributes = new { @class = "form-control", required = "required" } })
                 </div>
             </div>
 
             <div class="card-row-edit">
                 <div class="card-property-edit col-md-4"><p>Сокр.:</p></div>
                 <div class="card-value-edit col-md-8">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
                 </div>
             </div>
 
