--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                     <li>@Html.ActionLink("О программе", "About", "Home")</li>
                     <li>@Html.ActionLink("Картонки", "GetCard", "Projects")</li>
                     <li>@Html.ActionLink("Языки", "Cards", "Languages")</li>
+                    <li>@Html.ActionLink("Типы работ", "Cards", "WorkTypes")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
