--- a/TranslationReg/Views/WorkTypes/AddCard.cshtml
+++ b/TranslationReg/Views/WorkTypes/AddCard.cshtml
@@ -3,10 +3,10 @@
 @using (Html.BeginForm("Create", "WorkTypes"))
 {
     @Html.AntiForgeryToken()
-    <div class="card card-worktype">
+    <div class="card card-orange card-300-180">
 
-        <div class="card-header lang-header">
-            <p>Добавить тип работ</p>
+        <div class="card-header orange-header">
+            <p>Доб. тип работ</p>
             <div>
                 <a class="fa fa-arrow-circle-left card-btn" style="font-size:36px" href="/Worktypes/Cards"></a>
             </div>
